parser/predicate_parser.go
// Code generated from Predicate.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // Predicate

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "'*'", "'/'", "'+'", "'-'",
	"'%'", "'!='", "'=='", "'>='", "'<='", "'<'", "'>'", "'!'", "'['", "']'",
	"'('", "')'", "','", "'''", "'\"'", "'.'",
}
var symbolicNames = []string{
	"", "BOOL_LIT", "INT_LIT", "STRING_LIT", "FLOAT_LIT", "IN", "AND", "OR",
	"TRUE", "FALSE", "VAR", "WHITESPACE", "MUL", "DIV", "ADD", "SUB", "MOD",
	"NEQ", "EQ", "GTE", "LTE", "LT", "GT", "NOT", "LB", "RB", "LP", "RP", "CM",
	"SQ", "DQ", "DT", "SD",
}

var ruleNames = []string{
	"start", "exp", "exp1", "exp2", "exp3", "exp4", "exp5",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type PredicateParser struct {
	*antlr.BaseParser
}

func NewPredicateParser(input antlr.TokenStream) *PredicateParser {
	this := new(PredicateParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Predicate.g4"

	return this
}

// PredicateParser tokens.
const (
	PredicateParserEOF        = antlr.TokenEOF
	PredicateParserBOOL_LIT   = 1
	PredicateParserINT_LIT    = 2
	PredicateParserSTRING_LIT = 3
	PredicateParserFLOAT_LIT  = 4
	PredicateParserIN         = 5
	PredicateParserAND        = 6
	PredicateParserOR         = 7
	PredicateParserTRUE       = 8
	PredicateParserFALSE      = 9
	PredicateParserVAR        = 10
	PredicateParserWHITESPACE = 11
	PredicateParserMUL        = 12
	PredicateParserDIV        = 13
	PredicateParserADD        = 14
	PredicateParserSUB        = 15
	PredicateParserMOD        = 16
	PredicateParserNEQ        = 17
	PredicateParserEQ         = 18
	PredicateParserGTE        = 19
	PredicateParserLTE        = 20
	PredicateParserLT         = 21
	PredicateParserGT         = 22
	PredicateParserNOT        = 23
	PredicateParserLB         = 24
	PredicateParserRB         = 25
	PredicateParserLP         = 26
	PredicateParserRP         = 27
	PredicateParserCM         = 28
	PredicateParserSQ         = 29
	PredicateParserDQ         = 30
	PredicateParserDT         = 31
	PredicateParserSD         = 32
)

// PredicateParser rules.
const (
	PredicateParserRULE_start = 0
	PredicateParserRULE_exp   = 1
	PredicateParserRULE_exp1  = 2
	PredicateParserRULE_exp2  = 3
	PredicateParserRULE_exp3  = 4
	PredicateParserRULE_exp4  = 5
	PredicateParserRULE_exp5  = 6
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PredicateParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredicateParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Exp() IExpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(PredicateParserEOF, 0)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *PredicateParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PredicateParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(14)
		p.exp(0)
	}
	{
		p.SetState(15)
		p.Match(PredicateParserEOF)
	}

	return localctx
}

// IExpContext is an interface to support dynamic dispatch.
type IExpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpContext differentiates from other interfaces.
	IsExpContext()
}

type ExpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpContext() *ExpContext {
	var p = new(ExpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PredicateParserRULE_exp
	return p
}

func (*ExpContext) IsExpContext() {}

func NewExpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpContext {
	var p = new(ExpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredicateParserRULE_exp

	return p
}

func (s *ExpContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpContext) Exp1() IExp1Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp1Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp1Context)
}

func (s *ExpContext) Exp() IExpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *ExpContext) OR() antlr.TerminalNode {
	return s.GetToken(PredicateParserOR, 0)
}

func (s *ExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.EnterExp(s)
	}
}

func (s *ExpContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.ExitExp(s)
	}
}

func (p *PredicateParser) Exp() (localctx IExpContext) {
	return p.exp(0)
}

func (p *PredicateParser) exp(_p int) (localctx IExpContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExpContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExpContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 2
	p.EnterRecursionRule(localctx, 2, PredicateParserRULE_exp, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.exp1(0)
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(25)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewExpContext(p, _parentctx, _parentState)
			p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp)
			p.SetState(20)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			{
				p.SetState(21)
				p.Match(PredicateParserOR)
			}
			{
				p.SetState(22)
				p.exp1(0)
			}

		}
		p.SetState(27)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}

	return localctx
}

// IExp1Context is an interface to support dynamic dispatch.
type IExp1Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExp1Context differentiates from other interfaces.
	IsExp1Context()
}

type Exp1Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExp1Context() *Exp1Context {
	var p = new(Exp1Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PredicateParserRULE_exp1
	return p
}

func (*Exp1Context) IsExp1Context() {}

func NewExp1Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Exp1Context {
	var p = new(Exp1Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredicateParserRULE_exp1

	return p
}

func (s *Exp1Context) GetParser() antlr.Parser { return s.parser }

func (s *Exp1Context) Exp2() IExp2Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp2Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp2Context)
}

func (s *Exp1Context) Exp1() IExp1Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp1Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp1Context)
}

func (s *Exp1Context) AND() antlr.TerminalNode {
	return s.GetToken(PredicateParserAND, 0)
}

func (s *Exp1Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Exp1Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Exp1Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.EnterExp1(s)
	}
}

func (s *Exp1Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.ExitExp1(s)
	}
}

func (p *PredicateParser) Exp1() (localctx IExp1Context) {
	return p.exp1(0)
}

func (p *PredicateParser) exp1(_p int) (localctx IExp1Context) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExp1Context(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExp1Context = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, PredicateParserRULE_exp1, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.exp2(0)
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(36)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewExp1Context(p, _parentctx, _parentState)
			p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp1)
			p.SetState(31)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			{
				p.SetState(32)
				p.Match(PredicateParserAND)
			}
			{
				p.SetState(33)
				p.exp2(0)
			}

		}
		p.SetState(38)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}

	return localctx
}

// IExp2Context is an interface to support dynamic dispatch.
type IExp2Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExp2Context differentiates from other interfaces.
	IsExp2Context()
}

type Exp2Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExp2Context() *Exp2Context {
	var p = new(Exp2Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PredicateParserRULE_exp2
	return p
}

func (*Exp2Context) IsExp2Context() {}

func NewExp2Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Exp2Context {
	var p = new(Exp2Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredicateParserRULE_exp2

	return p
}

func (s *Exp2Context) GetParser() antlr.Parser { return s.parser }

func (s *Exp2Context) Exp3() IExp3Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp3Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp3Context)
}

func (s *Exp2Context) Exp2() IExp2Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp2Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp2Context)
}

func (s *Exp2Context) EQ() antlr.TerminalNode {
	return s.GetToken(PredicateParserEQ, 0)
}

func (s *Exp2Context) Exp1() IExp1Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp1Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp1Context)
}

func (s *Exp2Context) NEQ() antlr.TerminalNode {
	return s.GetToken(PredicateParserNEQ, 0)
}

func (s *Exp2Context) LT() antlr.TerminalNode {
	return s.GetToken(PredicateParserLT, 0)
}

func (s *Exp2Context) GT() antlr.TerminalNode {
	return s.GetToken(PredicateParserGT, 0)
}

func (s *Exp2Context) LTE() antlr.TerminalNode {
	return s.GetToken(PredicateParserLTE, 0)
}

func (s *Exp2Context) GTE() antlr.TerminalNode {
	return s.GetToken(PredicateParserGTE, 0)
}

func (s *Exp2Context) IN() antlr.TerminalNode {
	return s.GetToken(PredicateParserIN, 0)
}

func (s *Exp2Context) LB() antlr.TerminalNode {
	return s.GetToken(PredicateParserLB, 0)
}

func (s *Exp2Context) RB() antlr.TerminalNode {
	return s.GetToken(PredicateParserRB, 0)
}

func (s *Exp2Context) AllExp() []IExpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpContext)(nil)).Elem())
	var tst = make([]IExpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpContext)
		}
	}

	return tst
}

func (s *Exp2Context) Exp(i int) IExpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *Exp2Context) AllCM() []antlr.TerminalNode {
	return s.GetTokens(PredicateParserCM)
}

func (s *Exp2Context) CM(i int) antlr.TerminalNode {
	return s.GetToken(PredicateParserCM, i)
}

func (s *Exp2Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Exp2Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Exp2Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.EnterExp2(s)
	}
}

func (s *Exp2Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.ExitExp2(s)
	}
}

func (p *PredicateParser) Exp2() (localctx IExp2Context) {
	return p.exp2(0)
}

func (p *PredicateParser) exp2(_p int) (localctx IExp2Context) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExp2Context(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExp2Context = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, PredicateParserRULE_exp2, _p)
	var _la int

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.exp3(0)
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(74)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
			case 1:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(42)

				if !(p.Precpred(p.GetParserRuleContext(), 8)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 8)", ""))
				}
				{
					p.SetState(43)
					p.Match(PredicateParserEQ)
				}
				{
					p.SetState(44)
					p.exp1(0)
				}

			case 2:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(45)

				if !(p.Precpred(p.GetParserRuleContext(), 7)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 7)", ""))
				}
				{
					p.SetState(46)
					p.Match(PredicateParserNEQ)
				}
				{
					p.SetState(47)
					p.exp1(0)
				}

			case 3:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(48)

				if !(p.Precpred(p.GetParserRuleContext(), 6)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 6)", ""))
				}
				{
					p.SetState(49)
					p.Match(PredicateParserLT)
				}
				{
					p.SetState(50)
					p.exp1(0)
				}

			case 4:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(51)

				if !(p.Precpred(p.GetParserRuleContext(), 5)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 5)", ""))
				}
				{
					p.SetState(52)
					p.Match(PredicateParserGT)
				}
				{
					p.SetState(53)
					p.exp1(0)
				}

			case 5:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(54)

				if !(p.Precpred(p.GetParserRuleContext(), 4)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 4)", ""))
				}
				{
					p.SetState(55)
					p.Match(PredicateParserLTE)
				}
				{
					p.SetState(56)
					p.exp1(0)
				}

			case 6:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(57)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(58)
					p.Match(PredicateParserGTE)
				}
				{
					p.SetState(59)
					p.exp1(0)
				}

			case 7:
				localctx = NewExp2Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp2)
				p.SetState(60)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
				}
				{
					p.SetState(61)
					p.Match(PredicateParserIN)
				}
				{
					p.SetState(62)
					p.Match(PredicateParserLB)
				}
				p.SetState(71)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)

				if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<PredicateParserBOOL_LIT)|(1<<PredicateParserINT_LIT)|(1<<PredicateParserSTRING_LIT)|(1<<PredicateParserFLOAT_LIT)|(1<<PredicateParserVAR)|(1<<PredicateParserADD)|(1<<PredicateParserSUB)|(1<<PredicateParserNOT)|(1<<PredicateParserLP))) != 0 {
					{
						p.SetState(63)
						p.exp(0)
					}
					p.SetState(68)
					p.GetErrorHandler().Sync(p)
					_la = p.GetTokenStream().LA(1)

					for _la == PredicateParserCM {
						{
							p.SetState(64)
							p.Match(PredicateParserCM)
						}
						{
							p.SetState(65)
							p.exp(0)
						}

						p.SetState(70)
						p.GetErrorHandler().Sync(p)
						_la = p.GetTokenStream().LA(1)
					}

				}
				{
					p.SetState(73)
					p.Match(PredicateParserRB)
				}

			}

		}
		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())
	}

	return localctx
}

// IExp3Context is an interface to support dynamic dispatch.
type IExp3Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExp3Context differentiates from other interfaces.
	IsExp3Context()
}

type Exp3Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExp3Context() *Exp3Context {
	var p = new(Exp3Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PredicateParserRULE_exp3
	return p
}

func (*Exp3Context) IsExp3Context() {}

func NewExp3Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Exp3Context {
	var p = new(Exp3Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PredicateParserRULE_exp3

	return p
}

func (s *Exp3Context) GetParser() antlr.Parser { return s.parser }

func (s *Exp3Context) Exp4() IExp4Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp4Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp4Context)
}

func (s *Exp3Context) Exp3() IExp3Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExp3Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExp3Context)
}

func (s *Exp3Context) MOD() antlr.TerminalNode {
	return s.GetToken(PredicateParserMOD, 0)
}

func (s *Exp3Context) DIV() antlr.TerminalNode {
	return s.GetToken(PredicateParserDIV, 0)
}

func (s *Exp3Context) MUL() antlr.TerminalNode {
	return s.GetToken(PredicateParserMUL, 0)
}

func (s *Exp3Context) ADD() antlr.TerminalNode {
	return s.GetToken(PredicateParserADD, 0)
}

func (s *Exp3Context) SUB() antlr.TerminalNode {
	return s.GetToken(PredicateParserSUB, 0)
}

func (s *Exp3Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Exp3Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Exp3Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.EnterExp3(s)
	}
}

func (s *Exp3Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PredicateListener); ok {
		listenerT.ExitExp3(s)
	}
}

func (p *PredicateParser) Exp3() (localctx IExp3Context) {
	return p.exp3(0)
}

func (p *PredicateParser) exp3(_p int) (localctx IExp3Context) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewExp3Context(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IExp3Context = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 8
	p.EnterRecursionRule(localctx, 8, PredicateParserRULE_exp3, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Exp4()
	}

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(99)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(97)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
			case 1:
				localctx = NewExp3Context(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, PredicateParserRULE_exp3)
				p.SetState(82)
